
***  Support $sformat and $swrite.

***  Support 1800-2009 define defaults and `undefineall.

***  Add VARHIDDEN warning when signal name hides module name.

***  Add experimental clock domain crossing checks.

***  Add experimental --pipe-filter to filter all Verilog input.

***  Add experimental config files to filter warnings outside of the source.

***  Speed compiles by avoiding including the STL iostream header.
     Application programs may need to include it themselves to avoid errors.

**** Support optional cell parenthesis, bug179. [by Byron Bradley]

**** Support for loop i++, ++i, i--, --i, bug175. [by Byron Bradley]

**** Support 1800-2009 /*comments*/ in define values.

**** Add Makefile VM_GLOBAL_FAST, listing objects needed to link executables.

**** Add --bbox-unsup option to black-box unsupported UDP tables.

**** Add -Wno-MODDUP option to allow duplicate modules.

**** Fix creating implicit variables for expressions, bug196. [Byron Bradley]

**** Fix duplicate implicit variables under generates, bug201. [Byron Bradley]

**** Fix for variable typing, bug205.  [by Byron Bradley]

**** Fix tracing with --pins-bv 1, bug195.  [Michael S]

**** Fix MSVC++ 2008 compile issues, bug209.  [Amir Gonnen]

**** Fix MinGW compilation, bug184. [by Shankar Giri]

**** Fix Cygwin 1.7.x compiler error with uint32_t, bug204.  [Ivan Djordjevic]

**** Fix `define argument mis-replacing system task of same name, bug191.

**** Fix Verilator core dump on wide integer divides, bug178. [Byron Bradley]

**** Fix lint_off/lint_on meta comments on same line as warning.

* Verilator 3.720 2009/10/26

**   Support little endian bit vectors ("reg [0:2] x;").

**   Support division and modulus of > 64 bit vectors.  [Gary Thomas]

***  Fix writing to out-of-bounds arrays writing element 0.

**** Fix core dump with SystemVerilog var declarations under unnamed begins.

**** Fix VCD files showing internal flattened hierarchy, broke in 3.714.
